--- a/Js part 1/hello.html
+++ b/Js part 1/hello.html
@@ -7,8 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <script>
-      alert("Hey you HIIII");
-    </script>
+    <h1>Hey I have seen you a bunch of times please we need to talk!</h1>
+
+    <script src="./hello.js"></script>
   </body>
 </html>
