--- a/Js part 3/inner.html
+++ b/Js part 3/inner.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <ul id="list">
+    <ul class="list">
       <li><a href="#">Item 1</a></li>
       <li><a href="#">Item 2</a></li>
       <li><a href="#">Item 3</a></li>
