--- a/Js part 3/inner.html
+++ b/Js part 3/inner.html
@@ -13,6 +13,6 @@
       <li><a href="#">Item 3</a></li>
     </ul>
 
-    <script src=""></script>
+    <script src="./inner.js"></script>
   </body>
 </html>
