--- a/Js part 3/dom1.html
+++ b/Js part 3/dom1.html
@@ -18,7 +18,8 @@
         <li class="list-items">Marvel</li>
       </ul>
     </div>
-    <script src="./dom1.js"></script>
-    <script src="./dom2.js"></script>
+    <script src="./selectors.js"></script>
+    <script src="./renaming.js"></script>
+    <script src="./traversal.js"></script>
   </body>
 </html>
