--- a/Js part 3/event.html
+++ b/Js part 3/event.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="boxes box-1">
         <h1 id="heading">Example 1</h1>
-        <button>Enter</button>
+        <button class="btn-1">Enter</button>
       </div>
       <div class="boxes box-2">
         <h1 id="heading">Example 2</h1>
