--- a/Js part 3/event.html
+++ b/Js part 3/event.html
@@ -20,7 +20,7 @@
         <button class="btn-2">Enter</button>
       </div>
       <div class="boxes box-3">
-        <h1 id="heading">Example 3</h1>
+        <h1 id="heading" class="heading1">Example 3</h1>
         <button class="btn-3">Enter</button>
       </div>
     </div>
