--- a/Js part 3/listener.html
+++ b/Js part 3/listener.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./listener.css" />
+    <style>
+      .hidden-content {
+        display: none;
+      }
+
+      .reveal-btn {
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <h1 id="main-heading">Event Listeners</h1>
