--- a/Js part 3/listener.html
+++ b/Js part 3/listener.html
@@ -14,6 +14,12 @@
       .reveal-btn {
         display: block;
       }
+
+      #distance {
+        margin: 0 auto;
+        position: relative;
+        top: 2em;
+      }
     </style>
   </head>
   <body>
@@ -31,6 +37,16 @@
         expedita ipsam quisquam unde nam. Lorem ipsum dolor sit amet,
         consectetur adipisicing elit. Optio, officia?
       </div>
+    </div>
+    <div class="images">
+      <div class="img-adjust">Display the image</div>
+      <img
+        src="../img/workspace-gba8572f4a_1920.jpg"
+        alt="event image"
+        width="350px
+      "
+        class="hidden-content"
+      />
     </div>
 
     <script src="./listener.js"></script>
