--- a/Js part 5/basic.html
+++ b/Js part 5/basic.html
@@ -9,6 +9,7 @@
   <body>
     <!-- <script src="./basic.js"></script> -->
     <!-- <script src="./basic2.js"></script> -->
-    <script src="./basic3.js"></script>
+    <!-- <script src="./basic3.js"></script> -->
+    <script src="./basic4.js"></script>
   </body>
 </html>
