--- a/Js part 5/basic.html
+++ b/Js part 5/basic.html
@@ -11,6 +11,7 @@
     <!-- <script src="./basic2.js"></script> -->
     <!-- <script src="./basic3.js"></script> -->
     <!-- <script src="./basic4.js"></script> -->
-    <script src="./basic5.js"></script>
+    <!-- <script src="./basic5.js"></script> -->
+    <script src="./basic6.js"></script>
   </body>
 </html>
