--- a/Js part 5/basic.html
+++ b/Js part 5/basic.html
@@ -12,6 +12,7 @@
     <!-- <script src="./basic3.js"></script> -->
     <!-- <script src="./basic4.js"></script> -->
     <!-- <script src="./basic5.js"></script> -->
-    <script src="./basic6.js"></script>
+    <!-- <script src="./basic6.js"></script> -->
+    <script src="./basic7.js"></script>
   </body>
 </html>
