--- a/Js part 6/basic.html
+++ b/Js part 6/basic.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./basic1.js"></script>
+    <!-- <script src="./basic1.js"></script> -->
+    <script src="./basic2.js"></script>
   </body>
 </html>
