--- a/Js part 6/basic.html
+++ b/Js part 6/basic.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- <script src="./basic1.js"></script> -->
-    <script src="./basic2.js"></script>
+    <!-- <script src="./basic2.js"></script> -->
+    <script src="./basic3.js"></script>
   </body>
 </html>
