--- a/Js part 6/basic.html
+++ b/Js part 6/basic.html
@@ -4,11 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./basic3.css" />
     <title>Document</title>
   </head>
   <body>
     <!-- <script src="./basic1.js"></script> -->
     <!-- <script src="./basic2.js"></script> -->
     <script src="./basic3.js"></script>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
+
+    <table>
+      <thead>
+        <th>#</th>
+        <th>First</th>
+        <th>Last</th>
+        <th>Handle</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Larry the Bird</td>
+          <td></td>
+          <td>@twitter</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
