--- a/Js part 6/basic.html
+++ b/Js part 6/basic.html
@@ -18,6 +18,12 @@
     </ul>
 
     <table>
+      <caption class="heading">
+        Top cars
+      </caption>
+      <caption class="below">
+        Table 1.1
+      </caption>
       <thead>
         <th>#</th>
         <th>First</th>
