--- a/Js part 6/basic.html
+++ b/Js part 6/basic.html
@@ -10,7 +10,7 @@
   <body>
     <!-- <script src="./basic1.js"></script> -->
     <!-- <script src="./basic2.js"></script> -->
-    <ul>
+    <!-- <ul>
       <li>Home</li>
       <li>About</li>
       <li>Contact</li>
@@ -51,7 +51,17 @@
           <td>@twitter</td>
         </tr>
       </tbody>
-    </table>
-    <script src="./basic3.js"></script>
+    </table> -->
+    <!-- <script src="./basic3.js"></script> -->
+    <div class="">
+      <p class="paragraph" id="main-para">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
+        maiores autem fugiat <br />
+        <span class="small-text" style="color: red">We are champion!</span>
+        magnam tenetur odio rerum est quis perferendis quidem.
+      </p>
+      <h2 class="title">Sure you win</h2>
+    </div>
+    <script src="./basic4.js"></script>
   </body>
 </html>
