--- a/Js part 6/basic.html
+++ b/Js part 6/basic.html
@@ -53,7 +53,7 @@
       </tbody>
     </table> -->
     <!-- <script src="./basic3.js"></script> -->
-    <div class="">
+    <!-- <div class="">
       <p class="paragraph" id="main-para">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
         maiores autem fugiat <br />
@@ -61,7 +61,7 @@
         magnam tenetur odio rerum est quis perferendis quidem.
       </p>
       <h2 class="title">Sure you win</h2>
-    </div>
-    <script src="./basic4.js"></script>
+    </div> -->
+    <!-- <script src="./basic4.js"></script> -->
   </body>
 </html>
