--- a/Js part 6/basic2.html
+++ b/Js part 6/basic2.html
@@ -16,6 +16,21 @@
       </ul>
     </nav>
 
+    <section>
+      <table>
+        <caption>
+          The Numbers
+        </caption>
+        <tr>
+          <thead>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+          </thead>
+        </tr>
+      </table>
+    </section>
+
     <script src="./basic5.js"></script>
   </body>
 </html>
