--- a/Js part 6/basic2.html
+++ b/Js part 6/basic2.html
@@ -15,7 +15,7 @@
         <li><a href="#">More</a></li>
       </ul>
     </nav>
-
+    <!-- 
     <section>
       <table>
         <caption>
@@ -29,7 +29,7 @@
           </thead>
         </tr>
       </table>
-    </section>
+    </section> -->
 
     <script src="./basic5.js"></script>
   </body>
