--- a/Js part 6/basic2.html
+++ b/Js part 6/basic2.html
@@ -8,13 +8,13 @@
     <title>Document</title>
   </head>
   <body>
-    <nav>
+    <!-- <nav>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">More</a></li>
       </ul>
-    </nav>
+    </nav> -->
     <!-- 
     <section>
       <table>
