--- a/Js part 6/basic2.html
+++ b/Js part 6/basic2.html
@@ -31,6 +31,7 @@
       </table>
     </section> -->
 
-    <script src="./basic5.js"></script>
+    <!-- <script src="./basic5.js"></script> -->
+    <script src="./basic6.js"></script>
   </body>
 </html>
