--- a/Js part 6/basic2.html
+++ b/Js part 6/basic2.html
@@ -32,6 +32,16 @@
     </section> -->
 
     <!-- <script src="./basic5.js"></script> -->
+
+    <div id="content">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas,
+        voluptate aut explicabo adipisci ipsa tempore ut quos consectetur
+        mollitia, nihil aliquid et perspiciatis officia debitis? Voluptate
+        accusamus sapiente omnis id?
+        <span hidden>Hola amigos</span>
+      </p>
+    </div>
     <script src="./basic6.js"></script>
   </body>
 </html>
