--- a/Js part 6/basic2.html
+++ b/Js part 6/basic2.html
@@ -44,6 +44,13 @@
     </div> -->
     <!-- <script src="./basic6.js"></script> -->
 
+    <p>I am at top</p>
+    <div class="container">
+      <p>I am first</p>
+      <p>I am second</p>
+      <p>I am third</p>
+    </div>
+    <p>I am at bottom</p>
     <script src="./basic7.js"></script>
   </body>
 </html>
