--- a/Js part 6/basic2.html
+++ b/Js part 6/basic2.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./basic2.css" />
     <title>Document</title>
+    <style>
+      .red {
+        background: red;
+      }
+      .pink {
+        background: pink;
+        color: brown;
+      }
+      .blue {
+        background: skyblue;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <!-- <nav>
@@ -45,10 +58,10 @@
     <!-- <script src="./basic6.js"></script> -->
 
     <p>I am at top</p>
-    <div class="container">
-      <p>I am first</p>
-      <p>I am second</p>
-      <p>I am third</p>
+    <div id="unique" class="container">
+      <p class="red">I am first</p>
+      <p class="pink">I am second</p>
+      <p class="blue">I am third</p>
     </div>
     <p>I am at bottom</p>
     <script src="./basic7.js"></script>
