--- a/Js part 6/basic2.html
+++ b/Js part 6/basic2.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="./basic2.css" />
     <title>Document</title>
     <style>
+      .blue {
+        background: skyblue;
+        color: white;
+      }
       .red {
         background: red;
+        font-size: 1.5rem;
       }
       .pink {
         background: pink;
         color: brown;
-      }
-      .blue {
-        background: skyblue;
-        color: white;
       }
     </style>
   </head>
