--- a/Js part 7/basic.html
+++ b/Js part 7/basic.html
@@ -12,6 +12,7 @@
     </style>
   </head>
   <body>
-    <script src="./basic.js"></script>
+    <!-- <script src="./basic.js"></script> -->
+    <script src="./basic2.js"></script>
   </body>
 </html>
