--- a/Js part 7/basic.html
+++ b/Js part 7/basic.html
@@ -13,6 +13,8 @@
   </head>
   <body>
     <!-- <script src="./basic.js"></script> -->
+
+    <button>Click me</button>
     <script src="./basic2.js"></script>
   </body>
 </html>
