--- a/exercise.html
+++ b/exercise.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <button></button>
-    <button></button>
-    <button></button>
+    <button id="first">Click Me</button>
+    <button id="second" style="margin: 0 1.5em">Click Me</button>
+    <button id="third">Click Me</button>
     <script src="./exercise.js"></script>
   </body>
 </html>
