--- a/Js part 7/exercise3.html
+++ b/Js part 7/exercise3.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      body {
+        background: black;
+      }
+      .bulb {
+        background: yellow;
+        border: 2px solid rgba(255, 255, 0, 0.233);
+        border-radius: 100%;
+        box-shadow: 0px 0px 100px 50px yellow;
+        padding: 5em;
+        position: relative;
+        top: 20em;
+      }
+    </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container" style="width: 5%; margin: 0 auto">
       <!-- <a href="https://www.google.com/" target="_blank">
         <button>Google</button></a
       > -->
