--- a/Js part 6/basic2.html
+++ b/Js part 6/basic2.html
@@ -45,7 +45,7 @@
       </table>
     </section> -->
 
-    <!-- <script src="./basic5.js"></script> -->
+    <script src="./basic5.js"></script>
     <!-- 
     <div id="content">
       <p class="para">
@@ -58,13 +58,13 @@
     </div> -->
     <!-- <script src="./basic6.js"></script> -->
 
-    <p>I am at top</p>
+    <!-- <p>I am at top</p>
     <div id="unique" class="container">
       <p class="red">I am first</p>
       <p class="pink">I am second</p>
       <p class="blue">I am third</p>
     </div>
     <p>I am at bottom</p>
-    <script src="./basic7.js"></script>
+    <script src="./basic7.js"></script> -->
   </body>
 </html>
