--- a/Js part 7/callback.html
+++ b/Js part 7/callback.html
@@ -7,7 +7,15 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="container"></div>
-    <script src="./callback.js"></script>
+    <div id="container">
+      <!-- <table>
+        <tr>
+          <th>Name of Students</th>
+        </tr>
+        <tr id="valueStoring"></tr>
+      </table> -->
+    </div>
+    <!-- <script src="./callback.js"></script> -->
+    <script src="./callback1.js"></script>
   </body>
 </html>
