--- a/Js part 7/callback.html
+++ b/Js part 7/callback.html
@@ -16,7 +16,8 @@
       </table> -->
     </div>
     <!-- <script src="./callback.js"></script> -->
-    <script src="./callback1.js"></script>
+    <!-- <script src="./callback1.js"></script> -->
     <!-- <script src="./argument.js"></script> -->
+    <script src="./callback2.js"></script>
   </body>
 </html>
