--- a/Js part 8/callback.html
+++ b/Js part 8/callback.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./callbackHell.js"></script>
+    <!-- <script src="./callbackHell.js"></script> -->
+    <script src="./promise.js"></script>
   </body>
 </html>
