--- a/Js part 8/callback.html
+++ b/Js part 8/callback.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <!-- <script src="./callbackHell.js"></script> -->
-    <script src="./promise.js"></script>
+    <script src="./setTimeout.js"></script>
   </body>
 </html>
