--- a/Js part 8/callback.html
+++ b/Js part 8/callback.html
@@ -9,6 +9,7 @@
   <body>
     <!-- <script src="./callbackHell.js"></script> -->
     <!-- <script src="./setTimeout.js"></script> -->
-    <script src="./promises.js"></script>
+    <!-- <script src="./promises.js"></script> -->
+    <script src="./promise1.js"></script>
   </body>
 </html>
