--- a/Js part 8/callback.html
+++ b/Js part 8/callback.html
@@ -10,6 +10,7 @@
     <!-- <script src="./callbackHell.js"></script> -->
     <!-- <script src="./setTimeout.js"></script> -->
     <!-- <script src="./promises.js"></script> -->
-    <script src="./promise1.js"></script>
+    <!-- <script src="./promise1.js"></script> -->
+    <script src="./promiseGame.js"></script>
   </body>
 </html>
