--- a/Js part 8/promise.html
+++ b/Js part 8/promise.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./promiseNew.js"></script>
+    <!-- <script src="./promiseNew.js"></script> -->
+    <script src="./akshay.js"></script>
   </body>
 </html>
