--- a/Js part 8/promise.html
+++ b/Js part 8/promise.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- <script src="./promiseNew.js"></script> -->
-    <script src="./akshay.js"></script>
+    <!-- <script src="./akshay.js"></script> -->
+    <script src="./askshya2.js"></script>
   </body>
 </html>
