--- a/Js part 8/promise.html
+++ b/Js part 8/promise.html
@@ -9,6 +9,7 @@
   <body>
     <!-- <script src="./promiseNew.js"></script> -->
     <!-- <script src="./akshay.js"></script> -->
-    <script src="./askshya2.js"></script>
+    <!-- <script src="./askshya2.js"></script> -->
+    <script src="./akshay3.js"></script>
   </body>
 </html>
